--- a/final_assignment/final_assignment.Rmd
+++ b/final_assignment/final_assignment.Rmd
@@ -1,7 +1,7 @@
 ---
 author: "Study Group 11: Nereid Kwok, Nisa Ozer, Lauren Wade, Thomas Giannetti-Fakhouri, Kazmer Nagy-Betegh, Chandrime Tolia"
 
-title: "Session 6: Homework 3"
+title: "Final Assignment"
 
 date: "`r Sys.Date()`"
 output:
