--- a/final_assignment/final_assignment.Rmd
+++ b/final_assignment/final_assignment.Rmd
@@ -52,6 +52,7 @@ library(quantmod)
 library(stringr)
 library(stringdist)
 library(hash)
+library(labourR)
 ```
 
 
@@ -301,8 +302,76 @@ ask_a_manager_2021_cleaned <-
   merge(ask_a_manager_2021_cleaned, exchange_rate, by="currency", all.x = T)
 
 ask_a_manager_2021_cleaned <- ask_a_manager_2021_cleaned %>%  
-  mutate(salary_USD = annual_salary * Last)%>%
+  mutate(salary_usd = annual_salary * last)%>%
   clean_names()
 
 ```
+
+## Industry
+
+```{r industry-cleaning}
+standard_industry <- c("Accounting, Banking & Finance",
+                       "Agriculture or Forestry",
+                       "Art & Design",
+                       "Business or Consulting",
+                       "Computing or Tech",
+                       "Education (Primary/Secondary",
+                       "Education (Higher Education)",
+                       "Engineering or Manufacturing",
+                       "Entertainment",
+                       "Goverment and Public Administration",
+                       "Health care",
+                       "Hospitality & Events",
+                       "Insurance",
+                       "Law",
+                       "Law Enforrcement & Security",
+                       "Leisure, Sport & Tourism",
+                       "Marketing, Advertising & PR",
+                       "Media & Digital",
+                       "Nonprofits",
+                       "Property or Construction",
+                       "Recruitment or HR",
+                       "Retail",
+                       "Sales",
+                       "Social Work",
+                       "Transport or Logistics",
+                       "Utilities & Telecommunications")
+
+ 
+ask_a_manager_2021_cleaned%>%
+  filter(industry %in% standard_industry)
+# roughly 6000 people used the other function within the industry section.....
+
+unique(ask_a_manager_2021_cleaned$industry[!ask_a_manager_2021_cleaned$industry %in% standard_industry])
+```
+
+**Adding ISCO classification to the dataset** 
+```{r industry-cleaning}
+occupation_classification <- labourR::classify_occupation(corpus = ask_a_manager_2021_cleaned, 
+                                          isco_level = 2, 
+                                          lang = "en",
+                                          num_leaves = 10,
+                                          text_col = "industry",
+                                          id = "timestamp")%>%
+   mutate(timestamp = ymd_hms(timestamp))
+
+ask_a_manager_2021_cleaned <- ask_a_manager_2021_cleaned%>%
+  mutate(timestamp = ymd_hms(timestamp))
+
+ask_a_manager_2021_cleaned <- left_join(ask_a_manager_2021_cleaned,
+           occupation_classification,
+           by = "timestamp")%>%
+   clean_names()
+
+labR_classifications <- unique(occupation_classification$preferredLabel)
+labR_classifications
+
+```
+
+
+
+
+
+
+
 
